# Simpleres

./: .gitignore  CMakeLists.txt  README.md
simpleres/: CMakeLists.txt
simpleres/include/simpleres/: simpleres.h
simpleres/src/: buffreader.c  memory.c  simpleres.c
simpleres/src/include/: buffreader.h  memory.h  simpleres_internal.h  types.h
test/: CMakeLists.txt  compression_testing.c  pack_header_testing.c
test/testpack/: compressed_pack.smr  packer.py  test_pack.smr
testing/testpack/: packer.py  test_pack.smr
